--- a/quinzena3/sistema-loja/index.html
+++ b/quinzena3/sistema-loja/index.html
@@ -4,23 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nome da Loja</title>
+    <title>it's rainning flowers!</title>
 </head>
 <body>
     <div>
-        <h1>Bem-vind@ ao <em>nome da loja</em>!</h1>
-        <p>Frase de chamada para sua loja</p>
+        <h1>Bem-vind@ a <em>Floricultura Rainning Flowers</em>!</h1>
+        <p>Com amor,</p>
     </div>
 
     <div>
-        <a href="">Página Inicial</a>
-        <a href="">Controle de Estoque</a>
-        <a href="">Adicionar Produto</a>
-        <a href="">Funcionários</a>
+        <a href="funcionarios.html">Página Inicial</a>
+        <a href="ctrl-estoque.html">Controle de Estoque</a>
+        <a href="add-produto.html">Adicionar Produto</a>
+        <a href="funcionarios.html">Funcionários</a>
     </div>
 
     <div>
         <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
+        <h1>Chova sobre seus amores</h1>
+        <h2>Quando te faltar palavras, deixe que as flores falem por você</h2>
+        <p>A Rainning Flowers reúne, em um só lugar, os melhores fornecedores, o melhor atendimento e a melhor entrega para que tudo da sua surpresa ou  evento saia do seu jeitinho.</p>
+        <p>Confira abaixo algumas de nossa novidades</p>
+        <img src="img/banner.jpeg" alt="floricultura">
     </div>
 
     <div>
