--- a/quinzena3/sistema-loja/ctrl-estoque.html
+++ b/quinzena3/sistema-loja/ctrl-estoque.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div>
-        <p>Nome da lojinha</p>
+        <p>it's rainning flowers!</p>
     </div>
     
     <div>
-        <a href="">Página Inicial</a>
-        <a href="">Controle de Estoque</a>
-        <a href="">Adicionar Produto</a>
-        <a href="">Funcionários</a>
+        <a href="index.html">Página Inicial</a>
+        <a href="ctrl-estoque.html">Controle de Estoque</a>
+        <a href="add-produto.html">Adicionar Produto</a>
+        <a href="funcionarios.html">Funcionários</a>
     </div>
 
     <h2>Controle de Estoque</h2>
@@ -29,34 +29,41 @@
         </tr>
 
         <tr>
-            <td><img src="" alt=""/></td>
-            <td> * </td>
-            <td> * </td>
-            <td> * </td>
+            <td><img src="img/girasol.jpg" alt="buque girasol"/></td>
+            <td> Buquê Premium Girasol</td>
+            <td> 170 </td>
+            <td> 21 </td>
         </tr>
 
         <tr>
-            <td><img src="" alt=""/></td>
-            <td> * </td>
-            <td> * </td>
-            <td> * </td>
+            <td><img src="img/lirios.jpg" alt="buquê liros"/></td>
+            <td> Buquê convencional Lírios </td>
+            <td> 290 </td>
+            <td> 15 </td>
         </tr>
 
         <tr>
-            <td><img src="" alt=""/></td>
-            <td> * </td>
-            <td> * </td>
-            <td> * </td>
+            <td><img src="img/noiva.jpg" alt="buquê noiva"/></td>
+            <td> Buquê especial Noiva </td>
+            <td> 310 </td>
+            <td> 20 </td>
         </tr>
 
         <tr>
-            <td><img src="" alt=""/></td>
-            <td> * </td>
-            <td> * </td>
-            <td> * </td>
+            <td><img src="img/princesa-isabel.jpg" alt="buque princesa isabel"/></td>
+            <td> Buquê Princesa Isabel </td>
+            <td> 390 </td>
+            <td> 10 </td>
         </tr>
         
         <!-- Crie mais uma linha desta tabela abaixo \/ -->
+
+        <tr>
+            <td><img src="img/lirio-rosa.jpeg" alt="buquê lirios rosa"></td>
+            <td>Buquê de Lirios Rosa</td>
+            <td> 350 </td>
+            <td> 15 </td>
+        </tr>
 
     </table>
 
