--- a/quinzena3/sistema-loja/funcionarios.html
+++ b/quinzena3/sistema-loja/funcionarios.html
@@ -8,18 +8,25 @@
 </head>
 <body>
     <div>
-        <p>Nome da loja</p>
+        <p>it's rainning flowers!</p>
     </div>
     
     <div>
-        <a href="">Página Inicial</a>
-        <a href="">Controle de Estoque</a>
-        <a href="">Adicionar Produto</a>
-        <a href="">Funcionários</a>
+        <a href="index.html">Página Inicial</a>
+        <a href="ctrl-estoque.html">Controle de Estoque</a>
+        <a href="add-produto.html">Adicionar Produto</a>
+        <a href="funcionarios.html">Funcionários</a>
     </div>
 
     <h2>Funcionários</h2>
     <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
-        
+    <ul>
+        <li>Laís Oliveira</li>
+        <li>Ayla dos Santos</li>
+        <li>Priscila Amorin</li>
+        <li>Welynton Benício</li>
+        <li>Joana da Silva</li>
+
+    </ul>        
 </body>
 </html>
