Atividade Aula12-CSS: Inicio da estilizaçao da pagina

--- a/quinzena3/sistema-loja/index.html
+++ b/quinzena3/sistema-loja/index.html
@@ -1,41 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
     <title>it's rainning flowers!</title>
-</head>
-<body>
-    <div>
+  </head>
+  <body>
+    <header>
+      <div class="bemvindo">
+
         <h1>Bem-vind@ a <em>Floricultura Rainning Flowers</em>!</h1>
         <p>Com amor,</p>
-    </div>
-
-    <div>
+      </div>
+      <hr>
+      <div class="menu">
         <a href="funcionarios.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
-    </div>
+      </div>
+    </header>
 
-    <div>
-        <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
+    <div class="content">
+      <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
+      <div class="descricao">
         <h1>Chova sobre seus amores</h1>
         <h2>Quando te faltar palavras, deixe que as flores falem por você</h2>
-        <p>A Rainning Flowers reúne, em um só lugar, os melhores fornecedores, o melhor atendimento e a melhor entrega para que tudo da sua surpresa ou  evento saia do seu jeitinho.</p>
-        <p>Confira abaixo algumas de nossa novidades</p>
-        <img src="img/banner.jpeg" alt="floricultura">
+        <p>
+          A Rainning Flowers reúne, em um só lugar, os melhores fornecedores, o
+          melhor atendimento e a melhor entrega para que tudo da sua surpresa ou
+          evento saia do seu jeitinho.
+        </p>
+      </div>
+
+      <img class="banner" src="img/banner.jpeg" alt="floricultura" />
     </div>
 
-    <div>
-        <p>Siga-nos nas redes sociais!</p>
+    <footer>
+      <p>Siga-nos nas redes sociais!</p>
 
-        <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
-        </div>
-    </div>
-</body>
+      <div>
+        <img src="https://image.flaticon.com/icons/png/512/25/25305.png" />
+        <img src="https://image.flaticon.com/icons/png/512/25/25425.png" />
+        <img src="https://image.flaticon.com/icons/png/512/8/8800.png" />
+      </div>
+    </footer>
+  </body>
 </html>
