pequenas alteracoes no index

--- a/quinzena3/sistema-loja/index.html
+++ b/quinzena3/sistema-loja/index.html
@@ -11,8 +11,12 @@
     <header>
       <div class="bemvindo">
 
-        <h1>Bem-vind@ a <em>Floricultura Rainning Flowers</em>!</h1>
-        <p>Com amor,</p>
+        <div class="letreiro">
+          <h1>Bem-vind@ a <em>Floricultura Rainning Flowers</em>!</h1>
+          <p>Chova sobre seus amores</p>
+
+        </div>
+        <img src="img/logo.png" alt="logomarca">
       </div>
       <hr>
       <div class="menu">
@@ -26,7 +30,7 @@
     <div class="content">
       <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
       <div class="descricao">
-        <h1>Chova sobre seus amores</h1>
+        <h1></h1>
         <h2>Quando te faltar palavras, deixe que as flores falem por você</h2>
         <p>
           A Rainning Flowers reúne, em um só lugar, os melhores fornecedores, o
@@ -39,7 +43,7 @@
     </div>
 
     <footer>
-      <p>Siga-nos nas redes sociais!</p>
+      <h2>Siga-nos nas redes sociais!</h2>
 
       <div>
         <img src="https://image.flaticon.com/icons/png/512/25/25305.png" />
