--- a/quinzena3/sistema-loja/funcionarios.html
+++ b/quinzena3/sistema-loja/funcionarios.html
@@ -1,32 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+
     <title>Funcionários</title>
-</head>
-<body>
-    <div>
-        <p>it's rainning flowers!</p>
-    </div>
-    
-    <div>
+  </head>
+  <body>
+    <header>
+      <div class="bemvindo">
+        <div class="letreiro">
+          <h1><em>Floricultura Rainning Flowers</em></h1>
+          <p>Chova sobre seus amores</p>
+        </div>
+        <img src="img/logo.png" alt="logomarca" />
+      </div>
+      <hr />
+      <div class="menu">
         <a href="index.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
+      </div>
+    </header>
+
+    <div class="content">
+      <h2>Funcionários</h2>
+      <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
+      <div class="staff">
+        <ul>
+          <li class='impar'>Laís Oliveira</li>
+          <li class='par'>Ayla dos Santos</li>
+          <li class='impar'>Priscila Amorin</li>
+          <li class='par'>Welynton Benício</li>
+          <li class='impar'>Joana da Silva</li>
+        </ul>
+      </div>
     </div>
 
-    <h2>Funcionários</h2>
-    <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
-    <ul>
-        <li>Laís Oliveira</li>
-        <li>Ayla dos Santos</li>
-        <li>Priscila Amorin</li>
-        <li>Welynton Benício</li>
-        <li>Joana da Silva</li>
+    <footer>
+      <h2>Siga-nos nas redes sociais!</h2>
 
-    </ul>        
-</body>
+      <div>
+        <img src="https://image.flaticon.com/icons/png/512/25/25305.png" />
+        <img src="https://image.flaticon.com/icons/png/512/25/25425.png" />
+        <img src="https://image.flaticon.com/icons/png/512/8/8800.png" />
+      </div>
+    </footer>
+  </body>
 </html>
