--- a/quinzena3/sistema-loja/add-produto.html
+++ b/quinzena3/sistema-loja/add-produto.html
@@ -26,27 +26,27 @@
       </div>
     </header>
 
-    <div class="content">
+    <div class="content produto">
       <h2>Adicionar Produto</h2>
-      <form action="" id='formulario'>
-        <div class='campo-form'>
+      <form action="" id="formulario">
+        <div class="campo-form">
           <label for="link-foto">Link para foto: </label>
           <input type="url" id="link-foto" name="link-foto" />
         </div>
 
-        <div class='campo-form'>
+        <div class="campo-form">
           <label for="descricao">Descrição do produto: </label>
           <!-- Adicione o id apropriado para o input abaixo -->
           <input type="text" id="descricao" name="descrição" />
         </div>
 
-        <div class='campo-form'>
+        <div class="campo-form">
           <label for="preco">Preço (em R$): </label>
           <!-- Adicione o id apropriado e o type para receber números abaixo -->
           <input type="number" id="preco" name="preço" />
         </div>
 
-        <div class='campo-form'>
+        <div class="campo-form">
           <!-- Preencha as propriedades necessárias para os elementos abaixo -->
           <label for="quantidade">Quantidade disponível: </label>
 
@@ -59,5 +59,14 @@
         </div>
       </form>
     </div>
+    <footer>
+      <h2>Siga-nos nas redes sociais!</h2>
+
+      <div>
+        <img src="https://image.flaticon.com/icons/png/512/25/25305.png" />
+        <img src="https://image.flaticon.com/icons/png/512/25/25425.png" />
+        <img src="https://image.flaticon.com/icons/png/512/8/8800.png" />
+      </div>
+    </footer>
   </body>
 </html>
