Atividade de CSS aula 14 - Flex e Grid

--- a/quinzena4/flex-grid/index.html
+++ b/quinzena4/flex-grid/index.html
@@ -1,13 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" defer>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Confeitaria</title>
+  </head>
+  <body>
+    <header>
+      <div>
+        <img src="img/icone-bolinho.png" alt="logomarca" />
+        <h2>Confeitaria</h2>
+      </div>
+
+      <button>Login</button>
+    </header>
+
+    <main>
+      <div class="menu-lateral">
+        <div class="itens-do-menu">
+          <div class="itens-a-esquerda">
+            <img src="img/casinha.png" alt="home" />
+            <h4>HOME</h4>
+          </div>
+          <img src="img/setinha-direita.png" alt="seta" />
+        </div>
+        <div class="itens-do-menu">
+          <div class="itens-a-esquerda">
+            <img src="img/bombom.png" alt="produtos" />
+            <h4>PRODUTOS</h4>
+          </div>
+          <img src="img/setinha-direita.png" alt="seta" />
+        </div>
+        <div class="itens-do-menu">
+          <div class="itens-a-esquerda">
+            <img src="img/carrinho.png" alt="carrinho" />
+            <h4>CARRINHO</h4>
+          </div>
+          <img src="img/setinha-direita.png" alt="setinha" />
+        </div>
+        <div class="itens-do-menu">
+          <div class="itens-a-esquerda">
+            <img src="img/bombom.png" alt="perfil" />
+            <h4>PERFIL</h4>
+          </div>
+          <img src="img/setinha-direita.png" alt="" />
+        </div>
+      </div>
+
+      <div class="vitrina">
+        <div class="card">
+          <img src="img/bolo-bonito.jpg" alt="" />
+
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho com morangos</p>
+        </div>
+        <div class="card">
+          <img src="img/bolo-bonito.jpg" alt="" />
+
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho com morangos</p>
+        </div>
+        <div class="card">
+          <img src="img/bolo-bonito.jpg" alt="" />
+
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho com morangos</p>
+        </div>
+        <div class="card">
+          <img src="img/bolo-bonito.jpg" alt="" />
+
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho com morangos</p>
+        </div>
+        <div class="card">
+          <img src="img/bolo-bonito.jpg" alt="" />
+
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho com morangos</p>
+        </div>
+        <div class="card">
+          <img src="img/bolo-bonito.jpg" alt="" />
+
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho com morangos</p>
+        </div>
+        <div class="card">
+          <img src="img/bolo-bonito.jpg" alt="" />
+
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho com morangos</p>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <h3>Bolos deliciosos feitos com muito carinho 💘</h3>
+    </footer>
+  </body>
 </html>
