issue botao voltar da tela de compras resolvido

--- a/quinzena3/bugfixes/comprar.html
+++ b/quinzena3/bugfixes/comprar.html
@@ -42,7 +42,7 @@
         </table>
     </div>
     <div>
-        <button id="back-button"> VOLTAR </button>
+        <button onclick="location.href='/home.html'"id="back-button"> VOLTAR </button>
     </div>
 </body>
 
