entrega dos o desafio de grid e flex

--- a/quinzena4/flex-grid/index.html
+++ b/quinzena4/flex-grid/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-      <div class="menu-lateral">
+      <nav>
         <div class="itens-do-menu">
           <div class="itens-a-esquerda">
             <img src="img/casinha.png" alt="home" />
@@ -47,7 +47,7 @@
           </div>
           <img src="img/setinha-direita.png" alt="" />
         </div>
-      </div>
+      </nav>
 
       <div class="vitrina">
         <div class="card">
